# AIPokerCoach

./: .gitignore  README.md  Schedule.md
.github/workflows/: release.yml
NextServerClient/next-server-client/: drizzle.config.ts  package-lock.json  package.json
NextServerClient/next-server-client/drizzle/: 0000_amazing_firebrand.sql
NextServerClient/next-server-client/drizzle/meta/: 0000_snapshot.json  _journal.json
NextServerClient/next-server-client/src/app/: layout.tsx  page.tsx
NextServerClient/next-server-client/src/db/: schema.ts
NextServerClient/next-server-client/src/scripts/: temp.ts
RustHandScraper/: Cargo.toml  build.rs  hand.json
RustHandScraper/src/: auth.rs  config.rs  main.rs
RustHandScraper/wix/: main.wxs
next-server-client/: package-lock.json  package.json
next-server-client/drizzle/: 0000_yielding_talon.sql
next-server-client/src/: middleware.ts
next-server-client/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
next-server-client/src/config/: action.ts  card.ts  chart.ts  review.ts
next-server-client/src/db/: schema.ts
next-server-client/src/hooks/: useCreateRangeChart.ts  useDeleteRangeChart.ts  useGetHandsSocket.ts  useHandNotification.ts  useHandReview.ts  useHands.ts  useRangeChart.ts  useRangeCharts.ts  useUpdateRangeChart.ts
next-server-client/src/server/: genAI.ts  getPromptForHandReview.ts  getReplayActionsFromHand.ts  getSessionOrRedirect.ts  getUserIdFromSession.ts  handJsonToDb.ts  sse.ts
next-server-client/src/utils/: axiosClient.ts  getPromptForHandReview.ts
(+91 files in other folders)
