[package]
name = "RustHandScraper"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
image = "0.25.0"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tray-icon = "0.21.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
