[package]
name = "RustHandScraper"
version = "0.1.0"
edition = "2024"
authors = ["Kertesz Roland"]

[dependencies]
chrono = "0.4.41"
dirs = "5.0"
dotenv = "0.15.0"
eframe = "0.30.0"
egui = "0.30.0"
ehttp = "0.5.0"
image = "0.25.0"
keyring = { version = "3.6.2", features = ["windows-native"] }
native-dialog = "0.9.0"
oauth2 = { version="5.0.0", features = ["reqwest", "rustls-tls","reqwest-blocking"]}
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tray-icon = "0.21.0"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
webbrowser = "1.0.5"
winreg = "0.55.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
